--- a/dcsg/dcsg/dcsg.csproj
+++ b/dcsg/dcsg/dcsg.csproj
@@ -72,9 +72,15 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DCSG.cs" />
+    <Compile Include="Managers\Enums.cs" />
+    <Compile Include="Managers\Extensions.cs" />
+    <Compile Include="Managers\Fonts.cs" />
+    <Compile Include="Managers\Inputhandler.cs" />
+    <Compile Include="Managers\Screens.cs" />
+    <Compile Include="Managers\Textures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
