Added gameobject class

--- a/dcsg/dcsg/dcsg.csproj
+++ b/dcsg/dcsg/dcsg.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DCSG.cs" />
+    <Compile Include="GameObject\GameObject.cs" />
     <Compile Include="Managers\Enums.cs" />
     <Compile Include="Managers\Extensions.cs" />
     <Compile Include="Managers\Fonts.cs" />
