--- a/dcsg/dcsg/dcsg.csproj
+++ b/dcsg/dcsg/dcsg.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Managers\Textures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Screens\Mainmenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
