--- a/dcsg/dcsg/dcsg.csproj
+++ b/dcsg/dcsg/dcsg.csproj
@@ -73,17 +73,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DCSG.cs" />
-    <Compile Include="GameObject\Component\Camera.cs" />
-    <Compile Include="GameObject\Component\Component.cs" />
-    <Compile Include="GameObject\Component\SpriteRenderer.cs" />
-    <Compile Include="GameObject\Component\Transform.cs" />
-    <Compile Include="GameObject\GameObject.cs" />
-    <Compile Include="GameObject\GameObjectBase.cs" />
+    <Compile Include="GameObject\Component\Camera.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GameObject\Component\Component.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GameObject\Component\SpriteRenderer.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GameObject\Component\Transform.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GameObject\GameObject.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GameObject\GameObjectBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Managers\Enums.cs" />
     <Compile Include="Managers\Extensions.cs" />
     <Compile Include="Managers\Fonts.cs" />
     <Compile Include="Managers\Inputhandler.cs" />
     <Compile Include="Managers\Screens.cs" />
+    <Compile Include="Managers\SubClasses\AnimationFrame.cs" />
+    <Compile Include="Managers\SubClasses\Sprite.cs" />
     <Compile Include="Managers\Textures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
