--- a/dcsg/dcsg/dcsg.csproj
+++ b/dcsg/dcsg/dcsg.csproj
@@ -73,35 +73,35 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DCSG.cs" />
-    <Compile Include="GameObject\Component\Camera.cs">
+    <Compile Include="Engine\GameObject\Component\Camera.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameObject\Component\Component.cs">
+    <Compile Include="Engine\GameObject\Component\Component.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameObject\Component\SpriteRenderer.cs">
+    <Compile Include="Engine\GameObject\Component\SpriteRenderer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameObject\Component\Transform.cs">
+    <Compile Include="Engine\GameObject\Component\Transform.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameObject\GameObject.cs">
+    <Compile Include="Engine\GameObject\GameObject.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameObject\GameObjectBase.cs">
+    <Compile Include="Engine\GameObject\GameObjectBase.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Managers\Enums.cs" />
-    <Compile Include="Managers\Extensions.cs" />
-    <Compile Include="Managers\Fonts.cs" />
-    <Compile Include="Managers\Inputhandler.cs" />
-    <Compile Include="Managers\Screens.cs" />
-    <Compile Include="Managers\SubClasses\AnimationFrame.cs" />
-    <Compile Include="Managers\SubClasses\Sprite.cs" />
-    <Compile Include="Managers\Textures.cs" />
+    <Compile Include="Engine\Managers\Enums.cs" />
+    <Compile Include="Engine\Managers\Extensions.cs" />
+    <Compile Include="Engine\Managers\Fonts.cs" />
+    <Compile Include="Engine\Managers\Inputhandler.cs" />
+    <Compile Include="Engine\Managers\Screens.cs" />
+    <Compile Include="Engine\Managers\SubClasses\AnimationFrame.cs" />
+    <Compile Include="Engine\Managers\SubClasses\Sprite.cs" />
+    <Compile Include="Engine\Managers\Textures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Screens\Mainmenu.cs" />
+    <Compile Include="Game\Aleks\Screens\Mainmenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -141,6 +141,9 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Game\Ole\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
