--- a/dcsg/dcsg/dcsg.csproj
+++ b/dcsg/dcsg/dcsg.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Engine\GameObject\GameObjectBase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Engine\Initializer.cs" />
     <Compile Include="Engine\Managers\Enums.cs" />
     <Compile Include="Engine\Managers\Extensions.cs" />
     <Compile Include="Engine\Managers\Fonts.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Engine\Managers\SubClasses\AnimationFrame.cs" />
     <Compile Include="Engine\Managers\SubClasses\Sprite.cs" />
     <Compile Include="Engine\Managers\Textures.cs" />
+    <Compile Include="Engine\Managers\Time.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game\Aleks\Screens\Mainmenu.cs" />
